--- a/SportsStore.Web.UI/Views/Product/List.cshtml
+++ b/SportsStore.Web.UI/Views/Product/List.cshtml
@@ -1,16 +1,15 @@
-﻿@using SportsStore.Domain.Entities
-@model IEnumerable<Product>
+﻿@model SportsStore.Web.UI.Models.ProductsListViewModel
 
 @{
     ViewBag.Title = "Product";
 }
 
-@foreach(var p in Model)
+@foreach(var p in Model.Products)
 {
-    <div>
-        <h3>@p.Name</h3>
-        @p.Description
-        <h4>@p.Price.ToString("c")</h4>
-    </div>
+    @Html.Partial("ProductSummary", p)
 }
+
+<div class="paper">
+    @Html.PageLinks(Model.PagingInfo, x=> Url.Action("List", new { page = x }))
+</div>
 
